--- a/index.html
+++ b/index.html
@@ -4,7 +4,141 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amitges by Reyes & Yoli</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Estilos generales */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #fff;
+            color: #333;
+        }
+
+        h1, h2 {
+            color: #6A2C97; /* Color morado */
+        }
+
+        a {
+            text-decoration: none;
+            color: #6A2C97;
+        }
+
+        a:hover {
+            color: #540d6e;
+        }
+
+        /* Encabezado */
+        header {
+            background-color: #6A2C97; /* Morado */
+            padding: 20px;
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        header nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        header nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        header nav ul li a {
+            color: white;
+            font-weight: bold;
+        }
+
+        /* Banner */
+        .banner {
+            background-color: #D8A7E6; /* Color más claro de morado */
+            padding: 50px 0;
+            text-align: center;
+        }
+
+        .banner h1 {
+            font-size: 2.5em;
+            color: #6A2C97;
+        }
+
+        /* Productos destacados */
+        .productos-destacados {
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+        .productos-destacados h2 {
+            font-size: 2em;
+        }
+
+        .productos {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+
+        .producto {
+            width: 250px;
+            margin: 20px;
+            background-color: #F5E5F8;
+            padding: 20px;
+            text-align: center;
+            border-radius: 10px;
+        }
+
+        .producto img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+
+        .producto button {
+            background-color: #6A2C97;
+            color: white;
+            border: none;
+            padding: 10px;
+            margin-top: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .producto button:hover {
+            background-color: #540d6e;
+        }
+
+        /* Sección sobre nosotras */
+        .sobre-nosotras {
+            background-color: #F5E5F8;
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+        .sobre-nosotras p {
+            font-size: 1.2em;
+        }
+
+        /* Sección de contacto */
+        .contacto {
+            padding: 40px 20px;
+            text-align: center;
+            background-color: #D8A7E6;
+        }
+
+        .contacto p {
+            font-size: 1.2em;
+        }
+
+        /* Pie de página */
+        footer {
+            background-color: #6A2C97;
+            padding: 20px;
+            text-align: center;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <!-- Encabezado -->
