--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
       align-items: center;
     }
 
+    /* Ajuste para el logo */
+    .logo img {
+      display: block;
+      max-height: 60px;
+    }
+
     header nav ul {
       list-style: none;
       padding: 0;
@@ -139,7 +145,7 @@
   <!-- Encabezado -->
   <header>
     <div class="logo">
-      <img src="logo.png" alt="Amitges by Reyes & Yoli" height="50">
+      <img src="logo-amitges.png" alt="Amitges by Reyes & Yoli">
     </div>
     <nav>
       <ul>
