--- a/index.html
+++ b/index.html
@@ -69,11 +69,32 @@
     .productos-destacados {
       padding: 50px 20px;
       text-align: center;
+      position: relative;
+      background-color: #F3EDF1;
+      overflow: hidden;
     }
 
-    .productos-destacados h2 {
-      font-size: 2.2em;
-      margin-bottom: 40px;
+    /* Fondo decorativo con el logo */
+    .productos-destacados::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 400px;
+      height: 400px;
+      background-image: url('logo-fondo.png');
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+      opacity: 0.05;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+    }
+
+    .productos-destacados h2,
+    .productos-destacados .productos {
+      position: relative;
+      z-index: 2;
     }
 
     .productos {
@@ -81,8 +102,6 @@
       justify-content: center;
       flex-wrap: wrap;
       gap: 30px;
-      position: relative;
-      z-index: 2;
     }
 
     .producto {
@@ -139,17 +158,6 @@
       color: white;
       font-size: 0.95em;
     }
-
-    /* Fondo decorativo en Productos Destacados */
-    .fondo-logo {
-      background-image: url('logo-fondo.png');
-      background-repeat: no-repeat;
-      background-position: center 80px;
-      background-size: 300px;
-      background-attachment: scroll;
-      position: relative;
-      z-index: 1;
-    }
   </style>
 </head>
 <body>
@@ -174,7 +182,7 @@
   </section>
 
   <!-- Productos destacados con fondo de logo -->
-  <section class="productos-destacados fondo-logo" id="shop">
+  <section class="productos-destacados" id="shop">
     <h2>Productos Destacados</h2>
     <div class="productos">
       <div class="producto">
