--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       overflow: hidden;
     }
 
-    /* Fondo decorativo con el logo */
+    /* Logo como fondo decorativo */
     .productos-destacados::before {
       content: "";
       position: absolute;
@@ -82,7 +82,7 @@
       left: 50%;
       width: 400px;
       height: 400px;
-      background-image: url('logo-fondo.png');
+      background-image: url('logo-fondo.png'); /* Asegúrate de tener esta imagen en tu proyecto */
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
@@ -177,11 +177,11 @@
   </header>
 
   <!-- Banner -->
-  <section class="banner">
+  <section class="banner" id="home">
     <h1>¡Nuevas colecciones de primavera ya disponibles!</h1>
   </section>
 
-  <!-- Productos destacados con fondo de logo -->
+  <!-- Productos destacados -->
   <section class="productos-destacados" id="shop">
     <h2>Productos Destacados</h2>
     <div class="productos">
