--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     }
 
     .separador {
-      border-top: 2px solid #f7cfe6; /* rosa suave */
+      border-top: 2px solid #5A3D57; /* línea morada */
       margin: 0 20px 40px;
     }
 
