--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       height: 2px;
       background-color: #5A3D57;
       width: 80%;
-      margin: 20px auto 0;
+      margin: 60px auto 0; /* Separación mayor desde el texto */
     }
 
     .productos-destacados {
