--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       height: 2px;
       background-color: #5A3D57;
       width: 80%;
-      margin: 120px auto 0; /* Aumenté el margen superior a 120px */
+      margin: 120px auto 0;
     }
 
     .productos-destacados {
@@ -186,25 +186,25 @@
 
   <!-- Productos destacados -->
   <section class="productos-destacados" id="shop">
-    <h2>Productos Destacados</h2>
+    <h2>¡Verano SS 25!</h2>
     <div class="productos">
       <div class="producto">
-        <img src="producto1.jpg" alt="Producto 1">
-        <p>Producto 1</p>
+        <img src="ropa.jpg" alt="Ropa">
+        <p>Ropa</p>
         <p>$20.00</p>
-        <button>Añadir al carrito</button>
+        <button>Elegir</button>
       </div>
       <div class="producto">
-        <img src="producto2.jpg" alt="Producto 2">
-        <p>Producto 2</p>
+        <img src="zapatos.jpg" alt="Zapatos">
+        <p>Zapatos</p>
         <p>$30.00</p>
-        <button>Añadir al carrito</button>
+        <button>Elegir</button>
       </div>
       <div class="producto">
-        <img src="producto3.jpg" alt="Producto 3">
-        <p>Producto 3</p>
+        <img src="ropa-interior.jpg" alt="Ropa interior">
+        <p>Ropa interior</p>
         <p>$25.00</p>
-        <button>Añadir al carrito</button>
+        <button>Elegir</button>
       </div>
     </div>
   </section>
