--- a/index.html
+++ b/index.html
@@ -119,12 +119,6 @@
       transform: translateY(-5px);
     }
 
-    .producto img {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-    }
-
     .producto button {
       background-color: #5A3D57;
       color: white;
@@ -208,10 +202,9 @@
     <h2>¡Verano SS 25!</h2>
     <div class="productos">
       <div class="producto">
-        <img src="ropa.jpg" alt="Ropa">
         <p>Ropa</p>
         <p>$20.00</p>
-        <button onclick="mostrarCategorias('ropa')">Elegir</button>
+        <button onclick="toggleCategorias('ropa')">Elegir</button>
         <div class="categorias" id="categorias-ropa">
           <h3>Elige una categoría:</h3>
           <ul>
@@ -222,10 +215,9 @@
         </div>
       </div>
       <div class="producto">
-        <img src="calzado.jpg" alt="Calzado">
         <p>Calzado</p>
         <p>$30.00</p>
-        <button onclick="mostrarCategorias('calzado')">Elegir</button>
+        <button onclick="toggleCategorias('calzado')">Elegir</button>
         <div class="categorias" id="categorias-calzado">
           <h3>Elige una categoría:</h3>
           <ul>
@@ -236,10 +228,9 @@
         </div>
       </div>
       <div class="producto">
-        <img src="ropa-interior.jpg" alt="Ropa interior">
         <p>Ropa interior</p>
         <p>$25.00</p>
-        <button onclick="mostrarCategorias('ropa-interior')">Elegir</button>
+        <button onclick="toggleCategorias('ropa-interior')">Elegir</button>
         <div class="categorias" id="categorias-ropa-interior">
           <h3>Elige una categoría:</h3>
           <ul>
@@ -273,11 +264,18 @@
   </footer>
 
   <script>
-    function mostrarCategorias(categoria) {
+    function toggleCategorias(categoria) {
       const categorias = document.querySelectorAll('.categorias');
-      categorias.forEach(c => c.style.display = 'none');
-      
-      document.getElementById(`categorias-${categoria}`).style.display = 'block';
+      const categoriaElemento = document.getElementById(`categorias-${categoria}`);
+
+      // Toggle la visibilidad de la categoría
+      if (categoriaElemento.style.display === 'block') {
+        categoriaElemento.style.display = 'none';
+      } else {
+        // Ocultar todas las demás categorías
+        categorias.forEach(c => c.style.display = 'none');
+        categoriaElemento.style.display = 'block';
+      }
     }
   </script>
 </body>
