--- a/index.html
+++ b/index.html
@@ -154,6 +154,13 @@
       margin-bottom: 10px;
     }
 
+    .linea-separadora {
+      height: 2px;
+      background-color: #5A3D57;
+      width: 100%;
+      margin: 50px 0;
+    }
+
     .sobre-nosotras, .contacto {
       background-color: #F3EDF1;
       padding: 50px 20px;
@@ -242,6 +249,9 @@
       </div>
     </div>
   </section>
+
+  <!-- Línea separadora -->
+  <div class="linea-separadora"></div>
 
   <!-- Sobre nosotras -->
   <section class="sobre-nosotras" id="about">
