--- a/index.html
+++ b/index.html
@@ -62,35 +62,17 @@
       overflow: hidden;
     }
 
-    .banner::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 400px;
-      height: 400px;
-      background-image: url('logo-fondo.png');
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-position: center;
-      opacity: 0.05;
-      transform: translate(-50%, -50%);
-      z-index: 1;
-    }
-
     .banner h1 {
       font-size: 2.8em;
       margin: 0;
       color: #5A3D57;
-      position: relative;
-      z-index: 2;
     }
 
     .linea-morada {
       height: 2px;
       background-color: #5A3D57;
       width: 80%;
-      margin: 120px auto 0;
+      margin: 20px auto;
     }
 
     .productos-destacados {
@@ -157,8 +139,8 @@
     .linea-separadora {
       height: 2px;
       background-color: #5A3D57;
-      width: 100%;
-      margin: 50px 0;
+      width: 80%;
+      margin: 50px auto;
     }
 
     .sobre-nosotras, .contacto {
@@ -201,6 +183,7 @@
 
   <!-- Banner -->
   <section class="banner" id="home">
+    <h1>¡Verano SS 25!</h1>
     <div class="linea-morada"></div>
   </section>
 
@@ -250,7 +233,7 @@
     </div>
   </section>
 
-  <!-- Línea separadora -->
+  <!-- Línea separadora entre productos y "Sobre nosotras" -->
   <div class="linea-separadora"></div>
 
   <!-- Sobre nosotras -->
