--- a/index.html
+++ b/index.html
@@ -183,9 +183,12 @@
 
   <!-- Banner -->
   <section class="banner" id="home">
-    <h1>¡Verano SS 25!</h1>
-    <div class="linea-morada"></div>
+    <!-- Imagen del banner (en lugar de "¡Verano SS 25!") -->
+    <img src="imagen-banner.jpg" alt="Verano SS 25" style="max-width: 100%; height: auto;">
   </section>
+
+  <!-- Línea morada sin fondo blanco -->
+  <div class="linea-morada"></div>
 
   <!-- Productos destacados -->
   <section class="productos-destacados" id="shop">
