--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
       overflow: hidden;
     }
 
-    .banner h1 {
-      font-size: 2.8em;
-      margin: 0;
-      color: #5A3D57;
+    .banner img {
+      max-width: 100%;
+      height: auto;
     }
 
     .linea-morada {
@@ -184,7 +183,7 @@
   <!-- Banner -->
   <section class="banner" id="home">
     <!-- Imagen del banner (en lugar de "¡Verano SS 25!") -->
-    <img src="imagen-banner.jpg" alt="Verano SS 25" style="max-width: 100%; height: auto;">
+    <img src="imagen-banner.jpg" alt="Verano SS 25">
   </section>
 
   <!-- Línea morada sin fondo blanco -->
