--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       height: auto;
     }
 
+    /* Línea morada sin fondo blanco */
     .linea-morada {
       height: 2px;
       background-color: #5A3D57;
